Fixed project image visibility on mobile

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -70,7 +70,7 @@
   }
 
   .button-container {
-    visibility: hidden;
+    display: none;
   }
 
   .image-container {
